# OpenCL-Wrapper

./: .gitignore  CMakeLists.txt  README.md  libraries.mk  libraries.mk~
Code/: Doxyfile  Makefile  Makefile~  README.md  ocl_utils.pro
Code/inc/: ocl_buffer.h  ocl_context.h  ocl_device.h  ocl_device_type.h  ocl_event.h  ocl_event_list.h  ocl_image.h  ocl_kernel.h  ocl_memory.h  ocl_platform.h  ocl_program.h  ocl_query.h  ocl_queue.h  ocl_sampler.h  ocl_wrapper.h  utl_args.h  utl_assert.h  utl_dim.h  utl_flags.h  utl_matrix.h  utl_matrix2.h  utl_profile_pass.h  utl_profile_pass_manager.h  utl_storage.h  utl_stream.h  utl_timer.h  utl_type.h  utl_utils.h
Code/src/: ocl_buffer.cpp  ocl_context.cpp  ocl_device.cpp  ocl_device_type.cpp  ocl_event.cpp  ocl_event_list.cpp  ocl_image.cpp  ocl_kernel.cpp  ocl_memory.cpp  ocl_platform.cpp  ocl_program.cpp  ocl_query.cpp  ocl_queue.cpp  ocl_sampler.cpp  utl_args.cpp  utl_dim.cpp  utl_profile_pass.cpp  utl_profile_pass_manager.cpp  utl_storage.cpp  utl_stream.cpp  utl_timer.cpp  utl_type.cpp
OtherWork/: djinevski_2013.cl  djinevski_2013.cpp  gemm_in_muesli.cpp  matsumoto.cl  matsumoto_2012.cpp  torres_2011.cl  torres_2011.cpp  volkov_2008.cl  volkov_2008.cpp
Tutorial/: Makefile  Makefile~  Readme.md  buffer  context  events  kernel  platform  program  queue  tutorial.pro
Tutorial/1.platform/: Makefile  Makefile~  platform.cpp  platform.pri
Tutorial/10.image/: Makefile  image.cl  image.cpp  image.pri
Tutorial/11.profile/: Makefile  profile.cpp  profile.h  profile.pri  profile1.cl
Tutorial/2.context/: Makefile  context.cpp  context.pri
Tutorial/3.queue/: Makefile  queue.cpp  queue.pri
Tutorial/4.program/: Makefile  program.cpp  program.pri
Tutorial/5.buffer/: Makefile  buffer.cpp  buffer.pri
Tutorial/6.kernel/: Makefile  kernel.cpp  kernel.pri  reverse4.cl
Tutorial/7.events/: Makefile  events.cpp  events.pri
Tutorial/8.matrix/: Makefile  matrix.cpp  matrix.pri
Tutorial/9.minimum/: Makefile  minimum.cl  minimum.cpp  minimum.pri  minumum.cpp
